Refactor naming and configurations; update dependencies and add environment variables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=cheapest-llm-tool-calling
+spring.ai.openai.api-key=${GROQ_API_KEY}
+spring.ai.openai.base-url=https://api.groq.com/openai
+spring.ai.openai.chat.model=llama-3.1-8b-instant
