--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=cheapest-llm-tool-calling
 spring.ai.openai.api-key=${GROQ_API_KEY}
 spring.ai.openai.base-url=https://api.groq.com/openai
-spring.ai.openai.chat.model=llama-3.1-8b-instant
+spring.ai.openai.chat.options.model=llama-3.1-8b-instant
+spring.ai.openai.chat.options.temperature=0.1
