--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 		<spring-ai.version>1.1.0-M2</spring-ai.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-starter-model-mistral-ai</artifactId>
-		</dependency>
+        <!--		<dependency>-->
+        <!--			<groupId>org.springframework.ai</groupId>-->
+        <!--			<artifactId>spring-ai-starter-model-mistral-ai</artifactId>-->
+        <!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-starter-model-openai</artifactId>
