--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.ai.openai.api-key=${GROQ_API_KEY}
 spring.ai.openai.base-url=https://api.groq.com/openai
 spring.ai.openai.chat.options.model=llama-3.1-8b-instant
 spring.ai.openai.chat.options.temperature=0.1
+spring.ai.mistralai.api-key=${MISTRALAI_API_KEY}
+spring.ai.mistralai.chat.options.model=mistral-small
+spring.ai.mistralai.chat.options.temperature=0.1
