--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.ai.openai.chat.options.temperature=0.1
 #spring.ai.mistralai.api-key=${MISTRALAI_API_KEY}
 #spring.ai.mistralai.chat.options.model=mistral-small
 #spring.ai.mistralai.chat.options.temperature=0.1
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
