Update Gemini provider and dependencies
- Renamed `DEEPSEEK_MODELS` to `GEMINI_MODELS` for clarity.
- Updated `GeminiNativeProvider` to use `GEMINI_API_KEY` instead of `GOOGLE_API_KEY`.
- Bumped `spring-ai` version to `1.1.0-M3` in `pom.xml`.
- Added Gemini API key and default chat options to `application.properties`.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.ai.openai.chat.options.temperature=0.1
 #spring.ai.mistralai.chat.options.model=mistral-small
 #spring.ai.mistralai.chat.options.temperature=0.1
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
+spring.ai.google.genai.api-key=${GEMINI_API_KEY}
+spring.ai.google.genai.chat.options.model=gemini-2.0-flash
+spring.ai.google.genai.chat.options.temperature=0.1
