--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cheapest-llm-tool-calling
-spring.ai.openai.api-key=${GROQ_API_KEY}
-spring.ai.openai.base-url=https://api.groq.com/openai
-spring.ai.openai.chat.options.model=llama-3.1-8b-instant
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+#spring.ai.openai.base-url=https://api.groq.com/openai
+#spring.ai.openai.chat.options.model=llama-3.1-8b-instant
 spring.ai.openai.chat.options.temperature=0.1
 #spring.ai.mistralai.api-key=${MISTRALAI_API_KEY}
 #spring.ai.mistralai.chat.options.model=mistral-small
