Add Ollama local model support and benchmarking. This allows testing of LLMs running locally. Added test containers and model configurations for Ollama. Included test scenarios to compare Ollama models.

--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,14 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-model-ollama</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>ollama</artifactId>
+            <version>1.21.3</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
