Add test result HTML. This creates a file to display the results. Incorporate the OllamaDirectProvider. This allows tests without container dependency.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 spring.ai.google.genai.api-key=${GEMINI_API_KEY}
 spring.ai.google.genai.chat.options.model=gemini-2.0-flash
 spring.ai.google.genai.chat.options.temperature=0.1
+spring.ai.ollama.init.pull-model-strategy=when_missing
