--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,10 @@
 	</scm>
 	<properties>
 		<java.version>25</java.version>
-        <spring-ai.version>1.1.0-M3</spring-ai.version>
-	</properties>
+        <spring-ai.version>1.1.0-M4</spring-ai.version>
+        <embabel-agent.version>0.1.4</embabel-agent.version>
+    </properties>
+
 	<dependencies>
         <dependency>
             <groupId>org.springframework.ai</groupId>
@@ -76,6 +78,16 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.embabel.agent</groupId>
+            <artifactId>embabel-agent-starter</artifactId>
+            <version>${embabel-agent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.embabel.agent</groupId>
+            <artifactId>embabel-agent-starter-openai</artifactId>
+            <version>${embabel-agent.version}</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -99,4 +111,23 @@
 		</plugins>
 	</build>
 
+    <repositories>
+        <repository>
+            <id>embabel-releases</id>
+            <url>https://repo.embabel.com/artifactory/libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>embabel-snapshots</id>
+            <url>https://repo.embabel.com/artifactory/libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
